# hraptbcs

./: .gitignore  Makefile  WORKSPACE
document/: 3rd-party.md  Google-protobuf-upb-intr.md  data-patch.drawio  gerrit.md
hardware/: kconfig.menu
hardware/modules/common/: interface.sv
hardware/modules/processor/doc/: arch.drawio
software/: Kconfig.menu  kconfig.build
software/document/: device-driver-model.md  test.md
software/runtime/platform/device/processor/: Kconfig
software/runtime/service/console/: kconfig.menu
software/runtime/service/diagnose/: kconfig.menu
software/runtime/service/diagnose/asan/: kconfig.menu
software/runtime/service/diagnose/assert/: kconfig.menu
software/runtime/service/diagnose/logging/: kconfig.menu
software/runtime/service/diagnose/trace/: kconfig.menu
software/runtime/service/diagnose/wdt/: kconfig.menu
software/runtime/service/ppcm/: kconfig.menu
software/runtime/service/security/: kconfig.menu
software/runtime/service/storage/: kconfig.menu
software/samples/: BUILD.bazel
software/samples/console/: main.cc
software/samples/helloworld/: .gn  BUILD.gn  BUILDCONFIG.gn  Cargo.toml  Makefile  helloworld.ld  rust_rules.gni  rust_toolchain.gni
software/samples/helloworld/.cargo/: config.toml
software/samples/helloworld/src/: main.rs  semihost.rs
software/service/audio/: kconfig.menu
software/service/camera/: kconfig.menu
software/service/display/: kconfig.menu
software/service/video/: kconfig.menu
util/: nexus
util/env/: activate.sh  env-startup.sh
(+7 files in other folders)
